[metadata]
name = pwsafe.py
version = attr: pwsafe.__version__
description = Python3 library to manipulate PasswordSafe V3 files.
long_description = file: README
author = Marco Giusti
author_email = marco.giusti@posteo.de
url = https://github.com/marcogiusti/pwsafe.py
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    twofish

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    build
    coverage
    mypy
    pycodestyle
    pyflakes
    pytest
    pytest-cov
    tox
