[metadata]
name = pwsafe.py
version = attr: pwsafe.__version__
description = Python3 library to manipulate PasswordSafe V3 files.
long_description = file: README
author = Marco Giusti
author_email = marco.giusti@posteo.de
url = https://github.com/marcogiusti/pwsafe.py
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
include_package_data = True
install_requires =
    twofish @ git+https://github.com/marcogiusti/python-twofish.git@cffi

[options.extras_require]
dev =
    black
    build
    coverage
    mypy
    pycodestyle
    pyflakes
    pytest
    pytest-cov
    tox
